// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DotText should render element 1`] = `
<div>
  <span
    class="dotText"
  >
     
    1
    <i
      class="dot"
    >
      ·
    </i>
     
    2
    <i
      class="dot"
    >
      ·
    </i>
     
    text
    <i
      class="dot"
    >
      ·
    </i>
     
    <span>
      3
    </span>
  </span>
</div>
`;

exports[`DotText should render with empty array 1`] = `
<div>
  <span
    class="dotText"
  />
</div>
`;
